--- a/index.css
+++ b/index.css
@@ -1,9 +1,5 @@
 /*Fuentes*/
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap');
  
 :root{
  
@@ -94,6 +90,7 @@
 	width: 100%;
 	height: 280px;
 	background-color:red;
+	
 }
 
 .container .grid .grid__item .grid__item__image img{
@@ -140,17 +137,17 @@
 .pop-up-container{
 
 	position: fixed;
-	width: 90%;
-	max-width: 1200px;
-	height: 800px;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
+	width: 100%;
+	height: 100%;
+	top: 0%;
+	left: 0%;
 	display: none;
+	align-items: center;
+	justify-content: center;
 }
 
-.pop-up-container .close{
-
+.close{
+	
 	position: absolute;
 	right: 1rem;
 	top: 1rem;
@@ -161,16 +158,36 @@
 }
 
 .pop-up{
-	position: absolute;
-	top: 0;
-	bottom: 0;
-	right: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	background-color: #f0f8ff;
+	min-height: 90%;
+	width: 90%;
+	backdrop-filter: blur(50px);
+	background-color: rgba(250, 250, 250, 0.3);
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	text-align: center;
+	padding: 1rem 0;
 }
 
+.pop-up img{
+
+	border-radius: 50%;
+	width: 80%;
+	max-width: 200px;
+}
+
+.pop-up h2{
+	font-size: 2rem;
+	font-weight: 800;
+}
+
+.pop-up p{
+	font-size: 1.2rem;
+	font-weight: 600;
+	margin-top: .5rem;
+	padding: 0 10px;
+}
 
 .bounceIn {
 	-webkit-animation-name: bounceIn;
